--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                                 <a class="nav-link" href="#contacto">Contacto</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link d-none d-lg-block" href="#fotos">Fotos</a>
+                                <a class="nav-link d-none d-md-block" href="#fotos">Fotos</a>
                             </li>
                         </ul>
                     </div>
