--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 
         </header>
 
-        <section class="row" id="inicio">
+        <section class="row enlace-personalizacion" id="inicio">
             <div class="col-12 p-0 position-relative" id="inicio__photo--main">
                 <img src="imagenes/paris-main3.jpg" class="img-fluid w-100">
             </div>
@@ -108,7 +108,7 @@
 
             <div class="col-md-3 p-0 d-flex" id="inicio__visitar--promo1">
                 <a href="#" class="w-100 d-flex" data-toggle="modal" data-target="#exampleModal1">
-                    <img src="imagenes/montmartre.png" class="img-fluid d-block w-90 mx-auto " alt="">
+                    <img src="imagenes/montmartre.png" class="img-fluid d-block w-80 w-md-90 mx-auto " alt="">
                 </a>
 
                 <!-- inicioModal promo 1 -->
@@ -144,9 +144,9 @@
                                     Francisque Poulbot, Léon Bloy y Pierre Reverdy.</p>
                             </div>
                             <div class="modal-footer">
-                                <button type="button" class="btn btn-secondary" data-dismiss="modal">Cerrar</button>
+                                <button type="button" class="btn btn-outline-secondary" data-dismiss="modal">Cerrar</button>
                                 <a target="_blank" href="https://museedemontmartre.fr/es" type="button"
-                                    class="btn btn-primary">Visitar Web</a>
+                                    class="btn btn-outline-warning">Visitar Web</a>
                             </div>
                         </div>
                     </div>
@@ -155,9 +155,9 @@
             </div>
 
 
-            <div class="col-md-3" id="inicio__visitar--promo2">
+            <div class="col-md-3 p-0 d-flex" id="inicio__visitar--promo2">
                 <a href="#" class="w-100 d-flex"  data-toggle="modal" data-target="#exampleModal2">
-                    <img src="imagenes/louvre.png" class="img-fluid d-block w-100 mx-auto" alt="">
+                    <img src="imagenes/louvre.png" class="img-fluid d-block w-80 w-md-100 mx-auto" alt="">
                 </a>
                 <!-- inicioModal promo 2 -->
                 <div class="modal fade" id="exampleModal2" tabindex="-1" aria-labelledby="exampleModalLabel"
@@ -189,9 +189,9 @@
                                     de la sociedad. Ello lo convirtió en precedente y modelo para varios museos.</p>
                             </div>
                             <div class="modal-footer">
-                                <button type="button" class="btn btn-secondary" data-dismiss="modal">Cerrar</button>
+                                <button type="button" class="btn btn-outline-secondary" data-dismiss="modal">Cerrar</button>
                                 <a target="_blank" href="https://www.louvre.fr/es" type="button"
-                                    class="btn btn-primary">Visitar Web</a>
+                                    class="btn btn-outline-warning">Visitar Web</a>
                             </div>
                         </div>
                     </div>
@@ -200,7 +200,7 @@
             </div>
             <div class="col-md-3 p-0" id="inicio__visitar--promo3">
                 <a href="#" class="w-100 d-flex"  data-toggle="modal" data-target="#exampleModal3">
-                    <img src="imagenes/mindfulart.png" class="img-fluid d-block w-100 mx-auto" alt="">
+                    <img src="imagenes/mindfulart.png" class="img-fluid d-block w-80 w-md-100 mx-auto" alt="">
                 </a>
                 <!-- inicioModal promo 3 -->
                 <div class="modal fade" id="exampleModal3" tabindex="-1" aria-labelledby="exampleModalLabel"
@@ -241,9 +241,9 @@
 
                             </div>
                             <div class="modal-footer">
-                                <button type="button" class="btn btn-secondary" data-dismiss="modal">Cerrar</button>
+                                <button type="button" class="btn btn-outline-secondary" data-dismiss="modal">Cerrar</button>
                                 <a target="_blank" href="https://mindful-art.eu" type="button"
-                                    class="btn btn-primary">Visitar Web</a>
+                                    class="btn btn-outline-warning">Visitar Web</a>
                             </div>
                         </div>
                     </div>
@@ -252,7 +252,7 @@
             </div>
             <div class="col-md-3" id="inicio__visitar--promo4">
                 <a href="#" class="w-100 d-flex "  data-toggle="modal" data-target="#exampleModal4">
-                    <img src="imagenes/versailles.png" class="img-fluid d-block w-100 mx-auto" alt="">
+                    <img src="imagenes/versailles.png" class="img-fluid d-block w-80 w-md-100 mx-auto" alt="">
                 </a>
                 <!-- inicioModal promo 4 -->
                 <div class="modal fade" id="exampleModal4" tabindex="-1" aria-labelledby="exampleModalLabel"
@@ -293,9 +293,9 @@
 
                             </div>
                             <div class="modal-footer">
-                                <button type="button" class="btn btn-secondary" data-dismiss="modal">Cerrar</button>
+                                <button type="button" class="btn btn-outline-secondary" data-dismiss="modal">Cerrar</button>
                                 <a target="_blank" href="https://es.chateauversailles.fr/" type="button"
-                                    class="btn btn-primary">Visitar Web</a>
+                                    class="btn btn-outline-warning">Visitar Web</a>
                             </div>
                         </div>
                     </div>
@@ -304,7 +304,7 @@
             </div>
         </section>
 
-        <section class="row bg-dark" id="nosotros">
+        <section class="row bg-dark enlace-personalizacion" id="nosotros">
             <div class="col-md-6 col-lg-5 p-2 d-flex align-items-center" id="nosotros__photo">
                 <img id="img-nosotros" src="imagenes/people-1979261_1920.jpg" class="img-fluid img-thumbnail " alt="">
             </div>
@@ -324,7 +324,7 @@
             </div>
 
         </section>
-        <section class="row align-items-center" id="contacto">
+        <section class="row align-items-center enlace-personalizacion" id="contacto">
 
             <!-- inicio form -->
             <form class="p-3 px-md-2 pr-md-4 pl-md-4 col-md-6" id="contacto__form">
@@ -373,7 +373,7 @@
                         </label>
                     </div>
                 </div>
-                <button type="submit" class="btn btn-primary m-1 w-100">Enviar</button>
+                <button type="submit" class="btn btn-outline-warning m-1 w-100">Enviar</button>
             </form>
             <!-- fin form -->
             <div class="col-md-6 p-0" id="contacto__photo">
@@ -386,7 +386,7 @@
             </div>
         </section>
 
-        <section class="row" id="fotos">
+        <section class="row enlace-personalizacion" id="fotos">
             <div class="col-12 col-sm p-1" id="fotos--1">
                 <div id="carouselExampleSlidesOnly" class="carousel slide carousel-fade" data-ride="carousel">
                     <div class="carousel-inner">
