--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 
         </header>
 
-        <section class="row enlace-personalizacion" id="inicio">
+        <section class="row" id="inicio">
             <div class="col-12 p-0 position-relative" id="inicio__photo--main">
                 <img src="imagenes/paris-main3.jpg" class="img-fluid w-100">
             </div>
@@ -311,7 +311,7 @@
 
 
 
-        <section class="row bg-dark enlace-personalizacion" id="nosotros">
+        <section class="row bg-dark" id="nosotros">
 
             <div class="col-md-6 col-lg-5 p-2 d-flex align-items-center" id="nosotros__photo">
                 <img id="img-nosotros" src="imagenes/people-1979261_1920.jpg" class="img-fluid img-thumbnail " alt="">
@@ -338,7 +338,7 @@
               
 
         </section>
-        <section class="row align-items-center enlace-personalizacion" id="contacto">
+        <section class="row align-items-center" id="contacto">
 
             <!-- inicio form -->
             <form class="p-3 px-md-2 pr-md-4 pl-md-4 col-md-6" id="contacto__form">
@@ -399,7 +399,7 @@
             </div>
         </section>
 
-        <section class="row enlace-personalizacion" id="fotos">
+        <section class="row" id="fotos">
             <div class="col-12 col-sm p-1" id="fotos--1">
                 <div id="carouselExampleSlidesOnly" class="carousel slide carousel-fade" data-ride="carousel">
                     <div class="carousel-inner">
