--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Tourisme á paris</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css"
         integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l" crossorigin="anonymous">
-    <link rel="shortcut icon" href="/imagenes/eiffel-tower-307022_1280.png">
+    <link rel="shortcut icon" href="imagenes/eiffel-tower-307022_1280.png">
     <link rel="stylesheet" href="estilos.css">
     <link rel="stylesheet" href="fonts/styles.css">
     <link rel="preconnect" href="https://fonts.gstatic.com">
@@ -20,7 +20,7 @@
             <div class="col" id="header__nav--main">
                 <!-- inicio navbar -->
                 <nav class="navbar navbar-expand-lg navbar-dark bg-dark pl-md-5">
-                    <a class="navbar-brand" href="#"> <img src="/imagenes/logoblanco.png" height="25"
+                    <a class="navbar-brand" href="#"> <img src="imagenes/logoblanco.png" height="25"
                             class="d-inline-block align-top"> Tourisme á Paris</a>
                     <button class="navbar-toggler" type="button" data-toggle="collapse"
                         data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
